# common_mysql

./: .dccache  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
src/commonsql/: classes.py  connection.py  execute_schema.py  queries_basic.py
src/csql/: classes.py  connection.py  queries_schema.py
src/queries/: schema.py
tests/: test_classes.py  test_queries_basic.py  test_schema.py
tests/tests_core/: test_classes.py
tests/tests_queries/: test_basic.py  test_schema.py
