[metadata]
name = sql_writer
description = a set of functions that will write the sql so you dont have to
author = "HLS Management"
license = MIT
license_file = license
platforms = linux, osx
classifiers = 
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = 
    sql_writer
python_requires = >=3.6
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=7.0

[flake8]
max-line-length=128