[metadata]
name = commonsql
version = 0.1.0
description = A library of modules to generate and sql against a mysql db
author = HLS Management
license = MIT
license_file = license
platforms = linux, osx
classifiers = 
    Programming Language :: Python :: 3.10


[options]
packages = 
    commonsql
python_requires = >=3.10
install_requires = 
    mysql-connector-python==8.0.28
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=7.0
    pytest-cov>=3.0.0
    mypy>=0.971
    tox>=3.25.1
    flake8>=5.0.4

[options.package_data]
csql = py.typed

[flake8]
max-line-length=128